--- a/src/app/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  pokemon-list works!
-</p>
+<div class="row">
+  <div class="col-1 col-lg-1 col-md-3 col-sm-3" *ngFor="let pokemon of pokemonList; let i=index">
+    <app-pokemon-card [pokemonName]="pokemon.name"></app-pokemon-card>
+  </div>
+</div>
